Assessment score working
